prvni web final

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,8 @@ body {
   bottom: 5px;
   left: 5px;
   font-weight: bold;
-  background: rgba(0,0,0,0.5);
-  padding: 3px 6px;
+  background: rgba(255, 255, 255, 0.7);
+  padding: 1px 6px;
   border-radius: 4px;
 }
 
