--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,12 @@
 
 @font-face {
     font-family: 'title';
-    src: url("../fonts/Aptos/Aptos.ttf") format("opentype");
+    src: url("../fonts/Bahnschrift/BAHNSCHRIFT.TTF") format("opentype");
 }
 
 @font-face {
     font-family: 'textfont';
-    src: url("../fonts/Aptos/Aptos.ttf") format('truetype');
+    src: url("../fonts/Bahnschrift/BAHNSCHRIFT.TTF") format('truetype');
 }
 
 
@@ -59,4 +59,8 @@ body {
   margin: 0 12px;
   opacity: 0.6;
   font-weight: bold;
+}
+
+.nazev{
+  font-family: "title";
 }
